<?xml version="1.0"?>
<package format="2">
  <name>patchwork</name>
  <version>0.0.0</version>
  <description>patchwork package</description>

  <maintainer email="shapelim@kaist.ac.kr">Hyungtae Lim</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
