<?xml version="1.0"?>
<package format="3">
  <name>patchwork</name>
  <version>1.0.0</version>
  <description>patchwork ROS2 package</description>

  <maintainer email="shapelim@mit.edu">Hyungtae Lim</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <depend>rcutils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
